src/css/Card.css
/* Card Container and hover */
.card {
  min-height: 305px;
  width: 220px;
  border-radius: 10px;
  background-color: #943c1f;
  margin: 10px;
  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
}
.card:hover {
  box-shadow: 2px 12px 15px rgb(11, 11, 11);
  transition: 0.2s;
}
/* === */

/* Favorite and add to cart */
.card-interactions {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}
.favorite-button,
.addToCart-button {
  margin: 12px 8px;
  cursor: pointer;
}
.card-image-container {
  width: 100%;
  text-align: center;
}
/* === */

/* beverage image */
.card-image img {
  box-shadow: 1px 1px 1px black;
  background-color: white;
  border-radius: 5px;
}
/* === */

/* beverage name and price */
.beverage-info-container {
  width: 100%;
  text-align: center;
}
.beverage-name {
  font-size: 18px;
  font-family: "Viner Hand ITC", Times New Roman, cursive;
  color: white;
  letter-spacing: 2px;
  font-weight: bold;
  margin: 8px;
}
.beverage-price {
  margin: 5px;
  color: white;
  font-size: 18px;
  letter-spacing: 1px;
  font-style: oblique;
}
/* === */

/* Revolver and bullet */
.revolver-container {
  display: flex;
  height: 75px;
  width: 200px;
  justify-content: flex-start;
  align-items: center;
  padding-left: 20px;
}
.revolver-container img {
  padding-top: 12px;
}
/* === */

/* Bullet animation and hover */
.revolver-bullet {
  background-color: #943c1f;
  border-radius: 10px;
  height: 5px;
  width: 5px;
  position: relative;
  display: none;
}

/* Rotating revolver  */
.card:hover .revolver-img {
  rotate: -10deg;
  transition: 0.8s;
}

/* calling keyframe showing bullet*/
.card:hover .revolver-bullet {
  display: block;
  animation: myfirst 2s;
}

@keyframes myfirst {
  0% {
    background: yellow;
    left: 0px;
    right: 0px;
  }
  100% {
    background: white;
    left: 100px;
    right: 120px;
    background-color: #943c1f;
    display: none;
  }
}
/* === */

/* Learn more button - showing text upon hover*/
.learn-more {
  height: 45px;
  width: 50%;
  font-size: 18px;
  font-style: italic;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  color: rgb(250, 250, 251);
  font-style: italic;
  cursor: pointer;
  padding: 0;
  margin: 0;
  visibility: hidden;
}
.card:hover .learn-more {
  animation-delay: 2s;
  animation: show-learn-more 0s 0.2s forwards;
}

@keyframes show-learn-more {
  to {
    visibility: visible;
  }
}
/* === */

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
}
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
}

